fixed z-index and position for nav menu, adjusted media query layouts (header)

--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -16,20 +16,18 @@
   margin: 8px;
   background-color: #77864f;
 }
-
 .overlay {
   height: 100%;
   width: 100%;
   position: fixed;
-  z-index: 2;
+  z-index: 5;
   left: 0;
-  top: 0;
+  bottom: 0;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.85);
   overflow-x: hidden;
   transition: 0.5s;
 }
-
 .pageLinks {
   position: relative;
   top: 25%;
@@ -37,7 +35,6 @@
   text-align: center;
   margin-top: 30px;
 }
-
 .link {
   padding: 8px;
   text-decoration: none;
@@ -46,16 +43,48 @@
   display: block;
   transition: 0.3s;
 }
-
 .link:hover,
 .link:focus {
   color: #f1f1f1;
 }
-
 .closeBtn {
   position: absolute;
   top: 30px;
   right: 45px;
   font-size: 60px;
   color: #818181;
+}
+@media screen and (min-width: 550px) and (orientation: landscape) {
+  .navBar1 {
+    width: 15px;
+    height: 4px;
+    margin: 5px auto;
+  }
+  .navBar2 {
+    width: 20px;
+    height: 4px;
+    margin: 5px auto;
+  }
+  .navBar3 {
+    width: 25px;
+    height: 4px;
+    margin: 5px auto;
+  }
+}
+@media screen and (min-width: 750px) {
+  .navBar1 {
+    width: 25px;
+    height: 8px;
+    margin: 8px auto;
+  }
+  .navBar2 {
+    width: 30px;
+    height: 8px;
+    margin: 8px auto;
+  }
+  .navBar3 {
+    width: 35px;
+    height: 8px;
+    margin: 8px;
+  }
 }
