--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background-image: url("../images/scotland-castle.jpg");
   background-attachment: fixed;
-  background-position: right;
+  background-position: right bottom;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -624,7 +624,7 @@ pre tt:after {
   html {
     font-size: 16px;
   }
-  .website {
+  .children {
     max-width: 95%;
     position: relative;
     margin-top: 100px;
@@ -635,13 +635,38 @@ pre tt:after {
     right: 0;
     z-index: 1;
   }
+  .devHeader h2 {
+    border-left: 3px solid red;
+  }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 550px) and (orientation: landscape) {
+  .devHeader h1 {
+    display: inline-block;
+  }
+  .devHeader h2 {
+    display: inline-block;
+    border-top: 3px solid red;
+    padding-top: 5px;
+    border-left: none;
+  }
+}
+
+@media screen and (min-width: 750px) {
   html {
     font-size: 18px;
   }
-  .website {
+
+  .devHeader h1 {
+    display: block;
+  }
+  .devHeader h2 {
+    display: block;
+    border-top: none;
+    border-left: 3px solid red;
+  }
+
+  .children {
     max-width: 54%;
     position: relative;
     margin-left: 2.5%;
@@ -652,7 +677,7 @@ pre tt:after {
   html {
     font-size: 22px;
   }
-  .website {
+  .children {
     position: relative;
     margin-top: 130px;
     max-width: 800px;
@@ -665,7 +690,7 @@ pre tt:after {
   html {
     font-size: 28px;
   }
-  .website {
+  .children {
     margin-top: 175px;
     max-width: 1200px;
   }
